k8s/aws/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: static-deploy
  name: static-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-deploy
  template:
    metadata:
      labels:
        app: static-deploy
    spec:
      containers:
      - image: manedurphy/proxy-service
        name: proxy-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-read-deploy
  name: redis-read-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-read-deploy
  template:
    metadata:
      labels:
        app: redis-read-deploy
    spec:
      containers:
      - image: redis:6.2.3-alpine
        name: redis
        command:
          - "redis-server"
        args:
          - "--replicaof"
          - "redis-write-service.default.svc.cluster.local"
          - "6379"
          - "--protected-mode"
          - "no" 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-write-deploy
  name: redis-write-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-write-deploy
  template:
    metadata:
      labels:
        app: redis-write-deploy
    spec:
      containers:
      - image: redis:6.2.3-alpine
        name: redis
        command:
          - "redis-server"
        args:
          - "--protected-mode"
          - "no"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: properties-api-deploy
  name: properties-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: properties-api-deploy
  template:
    metadata:
      labels:
        app: properties-api-deploy
    spec:
      containers:
      - image: manedurphy/properties-api
        name: properties-api
        env: # change to secrets
        - name: HOST
          value: properties-db.czsnmstr0khj.us-east-1.rds.amazonaws.com
        - name: MYSQL_USER
          value: manedurphy
        - name: MYSQL_PASSWORD
          value: password
        - name: HOSTS_API
          value: http://hosts-api-service:8080
        - name: MYSQL_DB
          value: properties
        # - name: DROP_TABLES
        #   value: "true"
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /properties/healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        startupProbe:
          httpGet:
            path: /properties/healthz
            port: 8081
          failureThreshold: 30
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hosts-api-deploy
  name: hosts-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hosts-api-deploy
  template:
    metadata:
      labels:
        app: hosts-api-deploy
    spec:
      containers:
      - image: manedurphy/hosts-api
        name: hosts-api
        env: # change to secrets
        - name: HOST
          value: hosts-db.czsnmstr0khj.us-east-1.rds.amazonaws.com 
        - name: MYSQL_USER
          value: manedurphy
        - name: MYSQL_PASSWORD
          value: password
        - name: MYSQL_DB
          value: hosts
        # - name: DROP_TABLES
        #   value: "true"
        - name: PROPERTIES_API
          value: http://properties-api-service:8081
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /hosts/healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        startupProbe:
          httpGet:
            path: /hosts/healthz
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: get-data-api-deploy
  name: get-data-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-data-api-deploy
  template:
    metadata:
      labels:
        app: get-data-api-deploy
    spec:
      containers:
      - image: manedurphy/get-data-api
        name: get-data-api
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        startupProbe:
          httpGet:
            path: /api/healthz
            port: 8000
          failureThreshold: 30
          periodSeconds: 10
