k8s/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbnb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /rooms/
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-service
            port:
              number: 5000
      - path: /properties
        pathType: Prefix
        backend:
          service:
            name: properties-api-service
            port:
              number: 8081
      - path: /hosts
        pathType: Prefix
        backend:
          service:
            name: hosts-api-service
            port:
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: get-data-api-service
            port:
              number: 8000
